--- a/src/components/Hero/style.module.css
+++ b/src/components/Hero/style.module.css
@@ -32,7 +32,7 @@
 .button__inner {
   display: flex;
   gap: 20px;
-  justify-content: center;
+  /* justify-content: center; */
   margin-bottom: 40px;
 }
 .btn__order {
@@ -87,6 +87,9 @@
  .hero{
     padding-top: 106px;
     padding-bottom: 150px;
+ }
+ .button__inner{
+    justify-content: start;
  }
     .inner {
     display: flex;
